--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a:focus {
 .btn:focus {
   outline: none !important;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 /*header*/
@@ -92,8 +92,8 @@ a:focus {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .hero_area .hero_bg_box {
@@ -106,11 +106,11 @@ a:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
   overflow: hidden;
   z-index: -1;
 }
@@ -245,7 +245,7 @@ a:focus {
   top: 0;
 }
 
-/* slider section */
+/* carrosel */
 .slider_section {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -919,7 +919,7 @@ a:focus {
 
 .footer_section p {
   color: #00204a;
-  padding: 25px 0;
+  padding: 25px;
   margin: 0;
 }
 
