--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,19 +3,19 @@
 @media (max-width: 1120px) {}
 
 @media (max-width: 992px) {
-  .hero_area {
+  .area_textura {
     min-height: auto;
   }
 
-  .hero_area {
+  .area_textura {
     background: linear-gradient(130deg, #231a6f, #0f054c);
   }
 
-  .hero_area .hero_bg_box {
+  .area_textura .box_area_textura {
     display: none;
   }
 
-  .slider_section {
+  .section_carrosel {
     padding: 45px 0 75px 0;
   }
 
@@ -68,7 +68,7 @@
 }
 
 @media (max-width: 480px) {
-  .slider_section .detail-box h1 {
+  .section_carrosel .detail-box h1 {
     font-size: 2rem;
   }
 
