--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a:focus {
 }
 
 /*header*/
-.hero_area {
+.area_textura {
   position: relative;
   min-height: 100vh;
   display: -webkit-box;
@@ -96,7 +96,7 @@ a:focus {
   flex-direction: column;
 }
 
-.hero_area .hero_bg_box {
+.area_textura .box_area_textura {
   position: absolute;
   top: 0;
   left: 0;
@@ -115,22 +115,22 @@ a:focus {
   z-index: -1;
 }
 
-.hero_area .hero_bg_box .bg_img_box {
+.area_textura .box_area_textura .img_box_textura {
   min-width: 100%;
   min-height: 100%;
 }
 
-.hero_area .hero_bg_box img {
+.area_textura .box_area_textura img {
   min-width: 100%;
   min-height: 100%;
 }
 
-.sub_page .hero_area {
+.sub_page .area_textura {
   min-height: auto;
   background: linear-gradient(130deg, #231a6f, #0f054c);
 }
 
-.sub_page .hero_area .hero_bg_box {
+.sub_page .area_textura .box_area_textura {
   display: none;
 }
 
@@ -231,51 +231,51 @@ a:focus {
 
 .custom_nav-container .navbar-toggler[aria-expanded="true"] {
   -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 .custom_nav-container .navbar-toggler[aria-expanded="true"] span {
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .custom_nav-container .navbar-toggler[aria-expanded="true"] span::before, .custom_nav-container .navbar-toggler[aria-expanded="true"] span::after {
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
   top: 0;
 }
 
 /* carrosel */
-.slider_section {
+.section_carrosel {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
   padding: 45px 0 145px 0;
 }
 
-.slider_section .row {
+.section_carrosel .row {
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.slider_section #customCarousel1 {
+.section_carrosel #customCarousel1 {
   width: 100%;
   position: unset;
 }
 
-.slider_section .detail-box {
+.section_carrosel .detail-box {
   color: #00204a;
 }
 
-.slider_section .detail-box h1 {
+.section_carrosel .detail-box h1 {
   font-size: 3rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -283,12 +283,12 @@ a:focus {
   color: #ffffff;
 }
 
-.slider_section .detail-box p {
+.section_carrosel .detail-box p {
   color: #fefefe;
   font-size: 14px;
 }
 
-.slider_section .detail-box .btn-box {
+.section_carrosel .detail-box .btn-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -296,13 +296,13 @@ a:focus {
   margin-top: 25px;
 }
 
-.slider_section .detail-box .btn-box a {
+.section_carrosel .detail-box .btn-box a {
   margin: 5px;
   text-align: center;
   width: 165px;
 }
 
-.slider_section .detail-box .btn-box .btn1 {
+.section_carrosel .detail-box .btn-box .btn1 {
   display: inline-block;
   padding: 10px 15px;
   background-color: #00bbf0;
@@ -313,11 +313,11 @@ a:focus {
   border: none;
 }
 
-.slider_section .detail-box .btn-box .btn1:hover {
+.section_carrosel .detail-box .btn-box .btn1:hover {
   background-color: #007fa4;
 }
 
-.slider_section .detail-box .btn-box .btn2 {
+.section_carrosel .detail-box .btn-box .btn2 {
   display: inline-block;
   padding: 10px 15px;
   background-color: #000000;
@@ -328,62 +328,62 @@ a:focus {
   border: none;
 }
 
-.slider_section .detail-box .btn-box .btn2:hover {
+.section_carrosel .detail-box .btn-box .btn2:hover {
   background-color: black;
 }
 
-.slider_section .img-box {
+.section_carrosel .img-box {
   margin: 45px 0;
 }
 
-.slider_section .img-box img {
+.section_carrosel .img-box img {
   width: 100%;
   -webkit-animation: upDown 5s infinite;
-          animation: upDown 5s infinite;
+  animation: upDown 5s infinite;
 }
 
 @-webkit-keyframes upDown {
   0% {
     -webkit-transform: translateY(-45px);
-            transform: translateY(-45px);
+    transform: translateY(-45px);
   }
   50% {
     -webkit-transform: translateY(45px);
-            transform: translateY(45px);
+    transform: translateY(45px);
   }
   100% {
     -webkit-transform: translateY(-45px);
-            transform: translateY(-45px);
+    transform: translateY(-45px);
   }
 }
 
 @keyframes upDown {
   0% {
     -webkit-transform: translateY(-45px);
-            transform: translateY(-45px);
+    transform: translateY(-45px);
   }
   50% {
     -webkit-transform: translateY(45px);
-            transform: translateY(45px);
+    transform: translateY(45px);
   }
   100% {
     -webkit-transform: translateY(-45px);
-            transform: translateY(-45px);
+    transform: translateY(-45px);
   }
 }
 
-.slider_section .carousel-indicators {
+.section_carrosel .carousel-indicators {
   position: unset;
   margin: 0;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
-.slider_section .carousel-indicators li {
+.section_carrosel .carousel-indicators li {
   background-color: #ffffff;
   width: 12px;
   height: 12px;
@@ -391,7 +391,7 @@ a:focus {
   opacity: 1;
 }
 
-.slider_section .carousel-indicators li.active {
+.section_carrosel .carousel-indicators li.active {
   width: 20px;
   height: 20px;
   background-color: #00bbf0;
